--- a/Output/Pipeline.ipynb
+++ b/Output/Pipeline.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "conscious-genetics",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Climatic-data-from-kaggle\" data-toc-modified-id=\"Climatic-data-from-kaggle-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Climatic data from kaggle</a></span></li><li><span><a href=\"#Import-data\" data-toc-modified-id=\"Import-data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exploring-the-dataset\" data-toc-modified-id=\"Exploring-the-dataset-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Exploring the dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#Loking-for-NaN\" data-toc-modified-id=\"Loking-for-NaN-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Loking for NaN</a></span><ul class=\"toc-item\"><li><span><a href=\"#NaN-along-rows\" data-toc-modified-id=\"NaN-along-rows-2.1.1.1\"><span class=\"toc-item-num\">2.1.1.1&nbsp;&nbsp;</span>NaN along rows</a></span></li><li><span><a href=\"#NaN-along-columns\" data-toc-modified-id=\"NaN-along-columns-2.1.1.2\"><span class=\"toc-item-num\">2.1.1.2&nbsp;&nbsp;</span>NaN along columns</a></span></li></ul></li></ul></li><li><span><a href=\"#Cleaning-the-data-set\" data-toc-modified-id=\"Cleaning-the-data-set-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Cleaning the data set</a></span><ul class=\"toc-item\"><li><span><a href=\"#Remove-the-repetitive-first-columns\" data-toc-modified-id=\"Remove-the-repetitive-first-columns-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Remove the repetitive first columns</a></span></li><li><span><a href=\"#Get-Year-and-Months\" data-toc-modified-id=\"Get-Year-and-Months-2.2.2\"><span class=\"toc-item-num\">2.2.2&nbsp;&nbsp;</span>Get Year and Months</a></span></li></ul></li><li><span><a href=\"#Some-statistics\" data-toc-modified-id=\"Some-statistics-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Some statistics</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "useful-forest",
@@ -767,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "eight-painting",
    "metadata": {},
    "outputs": [
@@ -973,7 +984,7 @@
        "[5 rows x 1001 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "expensive-reminder",
    "metadata": {},
    "outputs": [],
@@ -994,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "written-involvement",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1379,7 @@
        "[14895 rows x 1001 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bulgarian-negotiation",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "nasty-search",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1599,7 @@
        "[5 rows x 1001 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "exceptional-russia",
    "metadata": {},
    "outputs": [
@@ -1960,7 +1971,7 @@
        "[14884 rows x 1001 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "sorted-nicholas",
    "metadata": {
     "scrolled": true
@@ -1992,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "certified-relations",
    "metadata": {},
    "outputs": [
@@ -2191,7 +2202,7 @@
        "[5 rows x 1003 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "assumed-smart",
    "metadata": {},
    "outputs": [],
@@ -2228,18 +2239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "bacterial-boulder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spain = df[['Year', 'Month', 'Madrid', 'Barcelona', 'Malaga', 'Sevilla', 'Zaragoza', 'Valencia', 'Cartagena','Bilbao']]\n",
-    "df_spain.to_csv(\"Temperature_Spain.csv\")"
+    "df_spain = df[['Year', 'Month', 'Madrid', 'Barcelona', 'Malaga', 'Sevilla', 'Zaragoza', 'Valencia','Bilbao']]\n",
+    "df_spain.to_csv(\"Temperature_Spain2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "exposed-retail",
    "metadata": {},
    "outputs": [
@@ -2275,10 +2286,7 @@
        "      <th>Zaragoza</th>\n",
        "      <th>Valencia</th>\n",
        "      <th>Valencia.1</th>\n",
-       "      <th>Cartagena</th>\n",
        "      <th>Bilbao</th>\n",
-       "      <th>Santiago</th>\n",
-       "      <th>Santiago.1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2295,10 +2303,7 @@
        "      <td>10.20</td>\n",
        "      <td>23.02</td>\n",
        "      <td>15.35</td>\n",
-       "      <td>27.03</td>\n",
        "      <td>10.67</td>\n",
-       "      <td>20.37</td>\n",
-       "      <td>22.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2313,10 +2318,7 @@
        "      <td>8.61</td>\n",
        "      <td>22.97</td>\n",
        "      <td>13.76</td>\n",
-       "      <td>27.46</td>\n",
        "      <td>7.52</td>\n",
-       "      <td>19.45</td>\n",
-       "      <td>21.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2331,10 +2333,7 @@
        "      <td>5.69</td>\n",
        "      <td>23.14</td>\n",
        "      <td>8.80</td>\n",
-       "      <td>27.19</td>\n",
        "      <td>7.27</td>\n",
-       "      <td>17.03</td>\n",
-       "      <td>22.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2349,10 +2348,7 @@
        "      <td>5.69</td>\n",
        "      <td>23.06</td>\n",
        "      <td>8.74</td>\n",
-       "      <td>27.27</td>\n",
        "      <td>8.21</td>\n",
-       "      <td>19.09</td>\n",
-       "      <td>22.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2367,10 +2363,7 @@
        "      <td>6.57</td>\n",
        "      <td>23.70</td>\n",
        "      <td>10.62</td>\n",
-       "      <td>27.32</td>\n",
        "      <td>7.81</td>\n",
-       "      <td>21.42</td>\n",
-       "      <td>22.52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2384,53 +2377,37 @@
        "3          14  1980      1    3.65       7.78        26.24   10.55     9.32   \n",
        "4          15  1980      1    4.20       8.29        26.13   10.87     9.28   \n",
        "\n",
-       "   Zaragoza  Valencia  Valencia.1  Cartagena  Bilbao  Santiago  Santiago.1  \n",
-       "0     10.20     23.02       15.35      27.03   10.67     20.37       22.25  \n",
-       "1      8.61     22.97       13.76      27.46    7.52     19.45       21.89  \n",
-       "2      5.69     23.14        8.80      27.19    7.27     17.03       22.54  \n",
-       "3      5.69     23.06        8.74      27.27    8.21     19.09       22.84  \n",
-       "4      6.57     23.70       10.62      27.32    7.81     21.42       22.52  "
+       "   Zaragoza  Valencia  Valencia.1  Bilbao  \n",
+       "0     10.20     23.02       15.35   10.67  \n",
+       "1      8.61     22.97       13.76    7.52  \n",
+       "2      5.69     23.14        8.80    7.27  \n",
+       "3      5.69     23.06        8.74    8.21  \n",
+       "4      6.57     23.70       10.62    7.81  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_spain = pd.read_csv(\"../Data/Temperature_Spain.csv\")\n",
+    "df_spain = pd.read_csv(\"Temperature_Spain2.csv\")\n",
     "df_spain[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "prerequisite-satin",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtoo = df_spain.groupby('Year').mean()"
+    "df_spain = df_spain.drop(['Barcelona.1', 'Valencia', 'Unnamed: 0'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "encouraging-commitment",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mean_year(df, year):\n",
-    "    df_mean_year = df.groupby([year]).mean()\n",
-    "    return df_mean_year\n",
-    "\n",
-    "def mean_month(df, month):\n",
-    "    df_mean_month = df.groupby([month]).mean()\n",
-    "    return df_mean_month"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "internal-insertion",
    "metadata": {
     "scrolled": false
@@ -2443,11 +2420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "known-testimony",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_year.to_csv(\"Temperature_Spain_year2.csv\")\n",
+    "df_month.to_csv(\"Temperature_Spain_month2.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -2476,8 +2456,13 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "426.667px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   },
