--- a/Output/Getting_Data_API.ipynb
+++ b/Output/Getting_Data_API.ipynb
@@ -462,126 +462,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "adapted-particular",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Occurrences</th>\n",
-       "      <th>species</th>\n",
-       "      <th>kingdom</th>\n",
-       "      <th>Genus</th>\n",
-       "      <th>Family</th>\n",
-       "      <th>country</th>\n",
-       "      <th>records</th>\n",
-       "      <th>Publishing_country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
-       "      <td>Animalia</td>\n",
-       "      <td>Apus</td>\n",
-       "      <td>Apodidae</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>HUMAN_OBSERVATION</td>\n",
-       "      <td>ES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1971</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
-       "      <td>Animalia</td>\n",
-       "      <td>Apus</td>\n",
-       "      <td>Apodidae</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>HUMAN_OBSERVATION</td>\n",
-       "      <td>ES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
-       "      <td>Animalia</td>\n",
-       "      <td>Apus</td>\n",
-       "      <td>Apodidae</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>HUMAN_OBSERVATION</td>\n",
-       "      <td>ES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1973</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
-       "      <td>Animalia</td>\n",
-       "      <td>Apus</td>\n",
-       "      <td>Apodidae</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>HUMAN_OBSERVATION</td>\n",
-       "      <td>ES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1974</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
-       "      <td>Animalia</td>\n",
-       "      <td>Apus</td>\n",
-       "      <td>Apodidae</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>HUMAN_OBSERVATION</td>\n",
-       "      <td>ES</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Year  Occurrences                        species   kingdom Genus    Family  \\\n",
-       "0  1970          0.0  Apus affinis (J.E.Gray, 1830)  Animalia  Apus  Apodidae   \n",
-       "1  1971          0.0  Apus affinis (J.E.Gray, 1830)  Animalia  Apus  Apodidae   \n",
-       "2  1972          0.0  Apus affinis (J.E.Gray, 1830)  Animalia  Apus  Apodidae   \n",
-       "3  1973          0.0  Apus affinis (J.E.Gray, 1830)  Animalia  Apus  Apodidae   \n",
-       "4  1974          0.0  Apus affinis (J.E.Gray, 1830)  Animalia  Apus  Apodidae   \n",
-       "\n",
-       "  country            records Publishing_country  \n",
-       "0   Spain  HUMAN_OBSERVATION                 ES  \n",
-       "1   Spain  HUMAN_OBSERVATION                 ES  \n",
-       "2   Spain  HUMAN_OBSERVATION                 ES  \n",
-       "3   Spain  HUMAN_OBSERVATION                 ES  \n",
-       "4   Spain  HUMAN_OBSERVATION                 ES  "
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0d2aad397b5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     ]
     }
    ],
    "source": [
