--- a/Output/Getting_Data_API.ipynb
+++ b/Output/Getting_Data_API.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "distributed-commons",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "composed-hacker",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fancy-lighting",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "200"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "differential-northeast",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp = ['Apus affinis', 'Apus caffer', 'Silene ciliata','Abies pinsapo', 'Lanius minor','Ciconia ciconia', 'Sonchus tenerrimus',\n",
-    "      'Araujia sericifera', 'Bucanetes githagineus', 'Hieraaetus pennatus','Anas penelope', 'Grus grus', 'Aythya fuligula',\n",
-    "          'Vanellus vanellus', 'Turdus iliacus', 'cortaderia selloana','Carpobrotus edulis', 'Fumaria munbyi' ]"
+    "sp = ['Apus affinis', 'Apus caffer', 'Silene ciliata','Abies pinsapo', 'Ciconia ciconia',\n",
+    "      'Anas penelope', 'Grus grus', 'Vanellus vanellus', 'Cortaderia selloana','Carpobrotus edulis', 'Alytes dickhilleni',\n",
+    "      'Parnassius apollo', 'Melitaea cinxia', 'Sonchus tenerrimus']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "another-guard",
    "metadata": {},
    "outputs": [
@@ -129,23 +129,19 @@
        " 'Apus caffer': 5228644,\n",
        " 'Silene ciliata': 7267056,\n",
        " 'Abies pinsapo': 2685464,\n",
-       " 'Lanius minor': 2492854,\n",
        " 'Ciconia ciconia': 2481912,\n",
-       " 'Sonchus tenerrimus': 3105768,\n",
-       " 'Araujia sericifera': 3170442,\n",
-       " 'Bucanetes githagineus': 2494394,\n",
-       " 'Hieraaetus pennatus': 2480685,\n",
        " 'Anas penelope': 2498111,\n",
        " 'Grus grus': 2474950,\n",
-       " 'Aythya fuligula': 2498261,\n",
        " 'Vanellus vanellus': 2480242,\n",
-       " 'Turdus iliacus': 2490781,\n",
-       " 'cortaderia selloana': 2704523,\n",
+       " 'Cortaderia selloana': 2704523,\n",
        " 'Carpobrotus edulis': 3084842,\n",
-       " 'Fumaria munbyi': 5532051}"
+       " 'Alytes dickhilleni': 2426613,\n",
+       " 'Parnassius apollo': 1938810,\n",
+       " 'Melitaea cinxia': 8168644,\n",
+       " 'Sonchus tenerrimus': 3105768}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "spanish-origin",
    "metadata": {},
    "outputs": [
@@ -176,7 +172,7 @@
        "200"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "regulation-distance",
    "metadata": {},
    "outputs": [],
@@ -198,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "adapted-particular",
    "metadata": {},
    "outputs": [
@@ -207,7 +203,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 12.4 µs\n"
+      "Wall time: 9.78 µs\n"
      ]
     }
    ],
@@ -222,12 +218,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ecological-audio",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Occurrences</th>\n",
+       "      <th>species</th>\n",
+       "      <th>kingdom</th>\n",
+       "      <th>Genus</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>country</th>\n",
+       "      <th>records</th>\n",
+       "      <th>Publishing_country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
+       "      <td>Animalia</td>\n",
+       "      <td>Apus</td>\n",
+       "      <td>Apodidae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1971</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
+       "      <td>Animalia</td>\n",
+       "      <td>Apus</td>\n",
+       "      <td>Apodidae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1972</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
+       "      <td>Animalia</td>\n",
+       "      <td>Apus</td>\n",
+       "      <td>Apodidae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1973</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
+       "      <td>Animalia</td>\n",
+       "      <td>Apus</td>\n",
+       "      <td>Apodidae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apus affinis (J.E.Gray, 1830)</td>\n",
+       "      <td>Animalia</td>\n",
+       "      <td>Apus</td>\n",
+       "      <td>Apodidae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Sonchus tenerrimus L.</td>\n",
+       "      <td>Plantae</td>\n",
+       "      <td>Sonchus</td>\n",
+       "      <td>Asteraceae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>696</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>137</td>\n",
+       "      <td>Sonchus tenerrimus L.</td>\n",
+       "      <td>Plantae</td>\n",
+       "      <td>Sonchus</td>\n",
+       "      <td>Asteraceae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>697</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Sonchus tenerrimus L.</td>\n",
+       "      <td>Plantae</td>\n",
+       "      <td>Sonchus</td>\n",
+       "      <td>Asteraceae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Sonchus tenerrimus L.</td>\n",
+       "      <td>Plantae</td>\n",
+       "      <td>Sonchus</td>\n",
+       "      <td>Asteraceae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>699</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>166</td>\n",
+       "      <td>Sonchus tenerrimus L.</td>\n",
+       "      <td>Plantae</td>\n",
+       "      <td>Sonchus</td>\n",
+       "      <td>Asteraceae</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>HUMAN_OBSERVATION</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>700 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year  Occurrences                        species   kingdom    Genus  \\\n",
+       "0    1970            0  Apus affinis (J.E.Gray, 1830)  Animalia     Apus   \n",
+       "1    1971            0  Apus affinis (J.E.Gray, 1830)  Animalia     Apus   \n",
+       "2    1972            0  Apus affinis (J.E.Gray, 1830)  Animalia     Apus   \n",
+       "3    1973            0  Apus affinis (J.E.Gray, 1830)  Animalia     Apus   \n",
+       "4    1974            0  Apus affinis (J.E.Gray, 1830)  Animalia     Apus   \n",
+       "..    ...          ...                            ...       ...      ...   \n",
+       "695  2015          143          Sonchus tenerrimus L.   Plantae  Sonchus   \n",
+       "696  2016          137          Sonchus tenerrimus L.   Plantae  Sonchus   \n",
+       "697  2017           50          Sonchus tenerrimus L.   Plantae  Sonchus   \n",
+       "698  2018           95          Sonchus tenerrimus L.   Plantae  Sonchus   \n",
+       "699  2019          166          Sonchus tenerrimus L.   Plantae  Sonchus   \n",
+       "\n",
+       "         Family country            records Publishing_country  \n",
+       "0      Apodidae   Spain  HUMAN_OBSERVATION                 ES  \n",
+       "1      Apodidae   Spain  HUMAN_OBSERVATION                 ES  \n",
+       "2      Apodidae   Spain  HUMAN_OBSERVATION                 ES  \n",
+       "3      Apodidae   Spain  HUMAN_OBSERVATION                 ES  \n",
+       "4      Apodidae   Spain  HUMAN_OBSERVATION                 ES  \n",
+       "..          ...     ...                ...                ...  \n",
+       "695  Asteraceae   Spain  HUMAN_OBSERVATION                 US  \n",
+       "696  Asteraceae   Spain  HUMAN_OBSERVATION                 US  \n",
+       "697  Asteraceae   Spain  HUMAN_OBSERVATION                 US  \n",
+       "698  Asteraceae   Spain  HUMAN_OBSERVATION                 US  \n",
+       "699  Asteraceae   Spain  HUMAN_OBSERVATION                 US  \n",
+       "\n",
+       "[700 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.concat(all_species).fillna(0).reset_index(drop=True)\n",
+    "df = pd.concat(all_occurrences).fillna(0).reset_index(drop=True)\n",
     "df"
    ]
   },
@@ -241,12 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "varied-iraqi",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_species.to_csv(\"species.csv\")"
+    "df.to_csv(\"species.csv\")"
    ]
   },
   {
